# silence-video-Editor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: prepare-commit-msg
scripts/: setup-git-hooks.sh
src/video_editor/: __init__.py  config.py  main.py
src/video_editor/api/: dependencies.py  schemas.py
src/video_editor/api/routes/: health.py  jobs.py
src/video_editor/application/: job_service.py  remove_silence.py  segment_builder.py
src/video_editor/domain/: exceptions.py  models.py  ports.py
src/video_editor/infrastructure/: ffmpeg_detector.py  ffmpeg_editor.py  ffprobe.py  job_repository.py  local_storage.py
static/: app.js  index.html  styles.css
tests/: test_ffmpeg_detector_parser.py  test_remove_silence_use_case.py  test_segment_builder.py
